force-app/main/default/objects/Project_Acceptance__c/Project_Acceptance__c.object-meta.xml
<CustomObject>
    <label>Project Acceptance</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Project Acceptance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Acceptances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>