force-app/main/default/objects/Project_Acceptance__c/fields/ABM_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>ABM_Project_Type__c</fullName>
    <label>ABM Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABM Bolt On</fullName>
            </value>
            <value>
                <fullName>ABM Fixed Rent</fullName>
            </value>
            <value>
                <fullName>ABM 10% Toggle</fullName>
            </value>
            <value>
                <fullName>ABM Entitled</fullName>
            </value>
            <value>
                <fullName>ABM Concealed</fullName>
            </value>
            <value>
                <fullName>ABM Transition (Bolt On)</fullName>
            </value>
            <value>
                <fullName>No ABM</fullName>
                <default>true</default>
                <label>No ABM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>