force-app/main/default/objects/Project_Acceptance__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <label>Agreement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABM</fullName>
            </value>
            <value>
                <fullName>Easement &amp; Assignment Agreement</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Flood 5.0</fullName>
            </value>
            <value>
                <fullName>Purchase Agreement</fullName>
            </value>
            <value>
                <fullName>T-mobile</fullName>
            </value>
            <value>
                <fullName>Verizon</fullName>
            </value>
            <value>
                <fullName>Dish Networks</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>VzW HRR Indexed</fullName>
                <label>VzW HRR Indexed 4.25%</label>
            </value>
            <value>
                <fullName>AT&amp;T HRR Indexed</fullName>
            </value>
            <value>
                <fullName>T-Mobile BTSSA</fullName>
            </value>
            <value>
                <fullName>AT&amp;T BTS HRR New Offer Indexed 5%</fullName>
            </value>
            <value>
                <fullName>T-Mobile HRR Indexed 3.9%</fullName>
            </value>
            <value>
                <fullName>AT&amp;T BTS DDBTS Indexed 5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>