force-app/main/default/objects/Project_Acceptance__c/fields/Anchor_Esc__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Esc__c</fullName>
    <label>Anchor Esc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>