force-app/main/default/objects/Project_Acceptance__c/fields/Anchor_Esc_Term_Length_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Esc_Term_Length_Yrs__c</fullName>
    <label>Anchor Esc Term Length (Yrs)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>