force-app/main/default/objects/Project_Acceptance__c/fields/Anchor_Rent_Fixed_Rent__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Rent_Fixed_Rent__c</fullName>
    <label>Anchor Rent (Fixed Rent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>