force-app/main/default/objects/Project_Acceptance__c/fields/Anchor_Rent_Index_Rate_Ground__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Rent_Index_Rate_Ground__c</fullName>
    <label>Anchor Rent (Index Rate + Ground)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>