force-app/main/default/objects/Project_Acceptance__c/fields/Anchor_Rent_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Rent_Reduction__c</fullName>
    <label>Anchor Rent Reduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>