force-app/main/default/objects/Project_Acceptance__c/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process</label>
    <referenceTo>strk__Approval_Process__c</referenceTo>
    <relationshipLabel>Project Acceptances (Approval Process)</relationshipLabel>
    <relationshipName>Project_Acceptances1</relationshipName>
    <type>Lookup</type>
</CustomField>