force-app/main/default/objects/Project_Acceptance__c/fields/Approval_Process_Template__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Process Template</label>
    <referenceTo>strk__Approval_Process_Template__c</referenceTo>
    <relationshipLabel>Project Acceptances</relationshipLabel>
    <relationshipName>Project_Acceptances</relationshipName>
    <type>Lookup</type>
</CustomField>