force-app/main/default/objects/Project_Acceptance__c/fields/Attorney__c.field-meta.xml
<CustomField>
    <fullName>Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Acceptances_Attorney</relationshipName>
    <type>Lookup</type>
</CustomField>