force-app/main/default/objects/Project_Acceptance__c/fields/BD_Lead__c.field-meta.xml
<CustomField>
    <fullName>BD_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Acceptances_BD_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>