force-app/main/default/objects/Project_Acceptance__c/fields/Business_Unit_Formula__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Formula__c</fullName>
    <formula>TEXT(Site__r.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit Formula</label>
    <type>Text</type>
</CustomField>