force-app/main/default/objects/Project_Acceptance__c/fields/Cap_Labor__c.field-meta.xml
<CustomField>
    <fullName>Cap_Labor__c</fullName>
    <label>Cap Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>