force-app/main/default/objects/Project_Acceptance__c/fields/Chief_Executive_Officer__c.field-meta.xml
<CustomField>
    <fullName>Chief_Executive_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chief Executive Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Acceptances_CEO</relationshipName>
    <type>Lookup</type>
</CustomField>