force-app/main/default/objects/Project_Acceptance__c/fields/Colo_Lease_up_Rate__c.field-meta.xml
<CustomField>
    <fullName>Colo_Lease_up_Rate__c</fullName>
    <label>Colo Lease-up Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>