force-app/main/default/objects/Project_Acceptance__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AMA Communications, LLC</fullName>
            </value>
            <value>
                <fullName>Appalachian Wireless</fullName>
            </value>
            <value>
                <fullName>Aristotle</fullName>
            </value>
            <value>
                <fullName>Arvig Enterprises, Inc.</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Beyond Reach</fullName>
            </value>
            <value>
                <fullName>Bluebird Networks</fullName>
            </value>
            <value>
                <fullName>BNSF Railroad</fullName>
            </value>
            <value>
                <fullName>BroadbandOne</fullName>
            </value>
            <value>
                <fullName>BSC Broadcasting</fullName>
            </value>
            <value>
                <fullName>CampTek</fullName>
            </value>
            <value>
                <fullName>Capitan USA</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Chippewa Tribe</fullName>
            </value>
            <value>
                <fullName>City of Fresno</fullName>
            </value>
            <value>
                <fullName>Claiborne Parish School</fullName>
            </value>
            <value>
                <fullName>Conexon</fullName>
            </value>
            <value>
                <fullName>Cross Wireless</fullName>
            </value>
            <value>
                <fullName>CSpire</fullName>
            </value>
            <value>
                <fullName>Cyber Mesa</fullName>
            </value>
            <value>
                <fullName>Dawson Enterprises</fullName>
            </value>
            <value>
                <fullName>DEA</fullName>
            </value>
            <value>
                <fullName>Dell Tel</fullName>
            </value>
            <value>
                <fullName>Delta High Speed</fullName>
            </value>
            <value>
                <fullName>Digital Access OH</fullName>
            </value>
            <value>
                <fullName>Dish Networks</fullName>
            </value>
            <value>
                <fullName>Edge X</fullName>
            </value>
            <value>
                <fullName>Ed Profaint</fullName>
            </value>
            <value>
                <fullName>Elektrafi LLC</fullName>
            </value>
            <value>
                <fullName>FBI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>