force-app/main/default/objects/Project_Acceptance__c/fields/Delayed_Rent_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delayed_Rent_Start_Date__c</fullName>
    <label>Delayed Rent Start Date</label>
    <type>Date</type>
</CustomField>