force-app/main/default/objects/Project_Acceptance__c/fields/Easement_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Easement_Acquisition__c</fullName>
    <label>Easement Acquisition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>