force-app/main/default/objects/Project_Acceptance__c/fields/FA_Code__c.field-meta.xml
<CustomField>
    <fullName>FA_Code__c</fullName>
    <label>FA Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>