force-app/main/default/objects/Project_Acceptance__c/fields/Finance_Sr_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Finance_Sr_Vice_President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Sr. Vice President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Acceptances_FVP</relationshipName>
    <type>Lookup</type>
</CustomField>