force-app/main/default/objects/Project_Acceptance__c/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <label>Funding</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAP</fullName>
                <default>true</default>
                <label>CAP</label>
            </value>
            <value>
                <fullName>OPX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>