force-app/main/default/objects/Project_Acceptance__c/fields/Ground_Esc_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Ground_Esc_Frequency__c</fullName>
    <label>Ground Esc Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>