force-app/main/default/objects/Project_Acceptance__c/fields/Hard_Capex__c.field-meta.xml
<CustomField>
    <fullName>Hard_Capex__c</fullName>
    <label>Hard Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>