force-app/main/default/objects/Project_Acceptance__c/fields/Legal_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>Legal_Hold_Comments__c</fullName>
    <label>Legal Hold Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>