force-app/main/default/objects/Project_Acceptance__c/fields/Legal_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Legal_Narrative__c</fullName>
    <label>Legal Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>