force-app/main/default/objects/Project_Acceptance__c/fields/Less_Capital_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Less_Capital_Contribution__c</fullName>
    <label>Less: Capital Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>