force-app/main/default/objects/Project_Acceptance__c/fields/Maintenance_Capex_yr__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Capex_yr__c</fullName>
    <label>Maintenance Capex/yr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>