force-app/main/default/objects/Project_Acceptance__c/fields/Number_of_Tenants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tenants__c</fullName>
    <label>Number of Tenants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>