force-app/main/default/objects/Project_Acceptance__c/fields/PMD_Narrative__c.field-meta.xml
<CustomField>
    <fullName>PMD_Narrative__c</fullName>
    <label>PMD Narrative</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>