force-app/main/default/objects/Project_Acceptance__c/fields/PMD_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>PMD_Recommendation__c</fullName>
    <label>PMD Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>