force-app/main/default/objects/Project_Acceptance__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>Project Acceptances</relationshipLabel>
    <relationshipName>Project_Acceptances</relationshipName>
    <type>Lookup</type>
</CustomField>