force-app/main/default/objects/Project_Acceptance__c/fields/Project_Management_Director__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Management Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Acceptances</relationshipName>
    <type>Lookup</type>
</CustomField>