force-app/main/default/objects/Project_Acceptance__c/fields/Project_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <referenceTo>strk__Project_Template__c</referenceTo>
    <relationshipLabel>Project Acceptances</relationshipLabel>
    <relationshipName>Project_Acceptances</relationshipName>
    <type>Lookup</type>
</CustomField>