force-app/main/default/objects/Project_Acceptance__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BTS</fullName>
            </value>
            <value>
                <fullName>BTS-P</fullName>
            </value>
            <value>
                <fullName>Combo (CMB)</fullName>
            </value>
            <value>
                <fullName>Corrective Maintenance (CM)</fullName>
            </value>
            <value>
                <fullName>Data Center (DC)</fullName>
            </value>
            <value>
                <fullName>DDBTS</fullName>
            </value>
            <value>
                <fullName>DDBTS-P</fullName>
            </value>
            <value>
                <fullName>Drop &amp; Swap</fullName>
            </value>
            <value>
                <fullName>Existing (EXT)</fullName>
            </value>
            <value>
                <fullName>Fiber (FR)</fullName>
            </value>
            <value>
                <fullName>Ground Only (GO)</fullName>
            </value>
            <value>
                <fullName>Harmoni Initiated</fullName>
            </value>
            <value>
                <fullName>Improvement (IMP)</fullName>
            </value>
            <value>
                <fullName>MKT</fullName>
            </value>
            <value>
                <fullName>New (NEW)</fullName>
                <default>true</default>
                <label>New (NEW)</label>
            </value>
            <value>
                <fullName>Other (OTH)</fullName>
            </value>
            <value>
                <fullName>Preventative Maintenance (PM)</fullName>
            </value>
            <value>
                <fullName>ROFR</fullName>
            </value>
            <value>
                <fullName>Structure &amp; Ground (SaG)</fullName>
            </value>
            <value>
                <fullName>Termination (TER)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>