force-app/main/default/objects/Project_Acceptance__c/fields/Rent_less_Ground__c.field-meta.xml
<CustomField>
    <fullName>Rent_less_Ground__c</fullName>
    <label>Rent less Ground</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>