force-app/main/default/objects/Project_Acceptance__c/fields/Rent_Reduction__c.field-meta.xml
<CustomField>
    <fullName>Rent_Reduction__c</fullName>
    <label>Rent Reduction %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>