force-app/main/default/objects/Project_Acceptance__c/fields/Rent_Reduction_Flat_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rent_Reduction_Flat_Amount__c</fullName>
    <label>Rent Reduction Flat Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>