force-app/main/default/objects/Project_Acceptance__c/fields/Rent_Start_Abatement_Overide__c.field-meta.xml
<CustomField>
    <fullName>Rent_Start_Abatement_Overide__c</fullName>
    <label>Rent Start/Abatement Overide</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>