force-app/main/default/objects/Project_Acceptance__c/fields/Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rev Share</label>
    <type>Checkbox</type>
</CustomField>