force-app/main/default/objects/Project_Acceptance__c/fields/Rev_Share_Ground_Pass_Thru__c.field-meta.xml
<CustomField>
    <fullName>Rev_Share_Ground_Pass_Thru__c</fullName>
    <label>Rev Share Ground Pass-Thru</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>