force-app/main/default/objects/Project_Acceptance__c/fields/Revenue_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Percentage__c</fullName>
    <label>Revenue Share Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>