force-app/main/default/objects/Project_Acceptance__c/fields/Revenue_Share_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Share_Type__c</fullName>
    <label>Revenue Share Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>