force-app/main/default/objects/Project_Acceptance__c/fields/RUCA_Code__c.field-meta.xml
<CustomField>
    <fullName>RUCA_Code__c</fullName>
    <label>RUCA Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>