force-app/main/default/objects/Project_Acceptance__c/fields/SBO_accept_reject_F__c.field-meta.xml
<CustomField>
    <fullName>SBO_accept_reject_F__c</fullName>
    <label>Site Build Opportunity Accept/Reject (F)</label>
    <type>Date</type>
</CustomField>