force-app/main/default/objects/Project_Acceptance__c/fields/SD_Narrative__c.field-meta.xml
<CustomField>
    <fullName>SD_Narrative__c</fullName>
    <label>SD Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>