force-app/main/default/objects/Project_Acceptance__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Name</label>
    <referenceTo>strk__Site__c</referenceTo>
    <relationshipLabel>Project Acceptance</relationshipLabel>
    <relationshipName>Project_Acceptances</relationshipName>
    <type>Lookup</type>
</CustomField>