force-app/main/default/objects/Project_Acceptance__c/fields/Site_Type__c.field-meta.xml
<CustomField>
    <fullName>Site_Type__c</fullName>
    <label>Site Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>