force-app/main/default/objects/Project_Acceptance__c/fields/Structure_Height__c.field-meta.xml
<CustomField>
    <fullName>Structure_Height__c</fullName>
    <label>Structure Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>