force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Esc__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Esc__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenant Esc</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>