force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Esc_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Esc_Frequency__c</fullName>
    <label>Tenant Esc Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Per-Term</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Escalation Every 60 months</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>