force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Index_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Index_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenant Index Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>