force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Pricing_Type__c</fullName>
    <label>Tenant Pricing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Index</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>