force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Rent_Fixed_Rent__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Rent_Fixed_Rent__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenant Rent (Fixed Rent)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>