force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Site_Name__c</fullName>
    <label>Tenant Site Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>