force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Subsidy__c</fullName>
    <label>Tenant Subsidy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>