force-app/main/default/objects/Project_Acceptance__c/fields/Tenant_Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Subsidy_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Tenant Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>