force-app/main/default/objects/Project_Acceptance__c/fields/Total_Operating_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Operating_Costs__c</fullName>
    <label>Total Operating Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>