force-app/main/default/objects/Project_Acceptance__c/fields/UE_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>UE_Last_Updated__c</fullName>
    <label>UE Last Updated</label>
    <type>DateTime</type>
</CustomField>